...
            .navigationBarItems(
            leading: EditButton(),
            trailing:
                NavigationLink(
                destination: AddView(),
                label: {
                    Text("Add")
                })
        )
    }
}

struct ListView_Previews: PreviewProvider {
...
